Update JournalEntryController.java
changed getFirst() to get(0)